fixed bug in path for images not showing on deployed

--- a/css/KJCustom.css
+++ b/css/KJCustom.css
@@ -46,7 +46,7 @@
     text-transform: uppercase;
     border-radius: 1rem;
     font-family: 'Courier';
-    -webkit-mask-image: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/8399/grunge.png');
+    -webkit-mask-image: url('assets/grunge.png');
     -webkit-mask-size: 944px 604px;
     mix-blend-mode: hard-light;
 }
